--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link
     rel="apple-touch-icon"
     sizes="72x72"
@@ -39,9 +40,9 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>Max The Creator</title>
+  <title>MXMLN</title>
   <meta name="description" content="" />
-  <meta name="author" content="@max-the-creator" />
+  <meta name="author" content="@mxmln-io" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
